Revert "Move background image to booksDisplay as a children. Remove custom scrollbar and hide it altogether due to not being able to have a repeating background working properly together with the address bar fix on mobile"
This reverts commit 7fc26ceec2fc068798d95881cc9e73588f47338c.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {
     --main-text-color:#000000;
     --secondary-text-color:#5d93ff;
     --exit-button-color:#ff5757;
+    overflow: hidden;
 }
 
 body {
@@ -19,7 +20,18 @@ body {
 }
 
 #myLibraryContainer::-webkit-scrollbar {
-    width: 0;
+    width: 1rem;
+    background-color: transparent;
+}
+
+#myLibraryContainer::-webkit-scrollbar-thumb {
+    background: var(--ui-background-color);
+    height: 3rem;
+}
+
+#myLibraryContainer::-webkit-scrollbar-track-piece
+{
+    display:none;
 }
 
 p {
@@ -175,6 +187,14 @@ p {
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
+}
+
+#mainBackgroundImage {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-size: cover;
 }
 
 input[type="color"]::-webkit-color-swatch,
@@ -372,17 +392,10 @@ legend {
     row-gap: 4rem;
     justify-content: center;
     justify-items: center;
-    padding: 12rem 17rem 4rem 10rem;
-}
-
-#mainBackgroundImage {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    background-size: cover;
-    top: 0;
-    left: 0;
+    padding-top: 12rem;
+    padding-bottom: 4rem;
+    padding-right: 17rem;
+    padding-left: 10rem;
 }
 
 .card {
@@ -580,7 +593,7 @@ legend {
     position: absolute;
     bottom: 1rem;
     right: 0;
-    margin-right: 2rem;
+    margin-right: 3rem;
     color: var(--ui-background-color);
     font-size: 1rem;
     text-shadow: 0.1rem 0.1rem 0.4rem var(--ui-background-color);
